--- a/package.json
+++ b/package.json
@@ -33,8 +33,9 @@
   "dependencies": {
     "jquery": "^3.4.1",
     "jquery.scrollex": "^0.2.1",
+    "js-yaml": "^3.13.1",
+    "lodash": "^4.17.15",
     "rellax": "^1.9.1",
     "reset-css": "^4.0.1"
   }
 }
-
